variables.RunFour.scala.error
Erreur de compilation :
RunFour:2: error: value unary_! is not a member of Int
while(!b==4){
      ^